# CartiGM

./: .dockerignore  .gitignore  Dockerfile  LICENSE  LITERATURE.md  README.md  docker-compose.yml  pyproject.toml  setup.py
cartigsfm/: README.md  __init__.py  ablation.py  agent.py  annotate.py  annotate_r.py  annotate_torch.py  assets.py  cellassign_torch.py  cli.py  cs_classifier.py  dictionary.py  fusion.py  gsfm.py  interpret.py  p4.py  projection.py  run_fusion.py  scgpt.py  scgpt_pretrain.py  scoring.py
cartigsfm_web/: __init__.py  server.py
reports/: P10_P13_INTEGRATION.md  P14_REAL_DATA_ABLATION.md  P15_ANNOTATION_COMPARISON.md  P17_FUSION_ABLATION.md  P17_FUSION_ABLATION_smoketest.md  P18_FUSION_ABLATION.md  P18_FUSION_AXIS42.md  P19_ANNOTATE_FULL_EBR.md  P19_ANNOTATE_FULL_EBR_smoke.md  PROJECT_REPORT.md  P_F_TRAINING_REPORT.md  USAGE_GUIDE.md  project_flow.html  project_flow.mmd
scripts/: _metabolism_axis_panels.py  _p3_inspect_atlas.py  _p4_accuracy_md.py  _p4_accuracy_report.py  _p4_summarize_ebr.py  _remote_all_celltype_panels_acc_launcher.py  _remote_all_celltype_panels_acc_remote.py  _remote_all_celltype_panels_launcher.py  _remote_all_celltype_panels_remote.py  _remote_check_h5ad_state.py  _remote_diagnose_lock.py  _remote_download_h5ad.py  _remote_ebr_panels_launcher.py  _remote_ebr_panels_remote.py  _remote_extract_train_subset.py  _remote_fetch_celltype_crosstab.py  _remote_find_annotated_ebr.py  _remote_find_ebr_candidates.py  _remote_h5_probe.py  _remote_homeostatic_panel_launcher.py  _remote_homeostatic_panel_remote.py  _remote_inspect_dict.py  _remote_inspect_ebr.py  _remote_inspect_ebr_fixed.py  _remote_probe_acc_new_celltypes.py  _remote_probe_acc_new_subtypes.py  _remote_probe_ebr_obs.py  _remote_probe_envs.py  _remote_pull_p4_outputs.py  _remote_run_p4.py  _remote_scgpt_pretrain.py  add_metabolism_functional_axes.py  add_nasal_septum_axis.py  (+16 more)
(+26 files in other folders)
