[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cartigsfm"
version = "0.6.1"
description = "Cartilage-domain gene-set foundation model utilities"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "CartiGSFM project" }]
license = { text = "MIT" }
dependencies = [
    "numpy",
    "pandas",
]

[project.optional-dependencies]
web = [
    "fastapi",
    "uvicorn",
]

[project.scripts]
cartigsfm = "cartigsfm.cli:main"
cartigsfm-web = "cartigsfm_web.server:main"

[tool.setuptools.packages.find]
include = ["cartigsfm*", "cartigsfm_web*"]

[tool.setuptools.package-data]
cartigsfm = [
    "resources/dictionary_v1/*.json",
    "resources/rag_v1/*.json",
    "resources/p9_v1/config/*.json",
    "resources/p9_v1/docs/*.md",
    "resources/p9_v1/tsv/*.tsv",
    "resources/cs_classifier_v1/*.pt",
    "resources/cs_classifier_v1/*.tsv",
]
cartigsfm_web = [
    "static/*.html",
    "static/*.css",
    "static/*.js",
]
